# parallelrun

./: CHANGELOG.md  Cargo.toml  Readme.md  justfile  test1.sh  test2.sh
.github/workflows/: ci.yml
src/: cmd_ex.rs  main.rs
tests/: simple.rs
