[package]
name = "parallelrun"
version = "0.1.3"
edition = "2021"
authors = ["extrawurst <mail@rusticorn.com>"]
description = "Runs several commands concurrently"
homepage = "https://github.com/rustunit/parallelrun"
repository = "https://github.com/rustunit/parallelrun"
readme = "Readme.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["cli", "terminal", "ui"]

[dependencies]
nix = "0.29"
crossbeam = "0.8"
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.rust]
warnings = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
dead_code = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
